--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BACK_URL=https://applergic-server.vercel.app/api/users
+REACT_APP_BACK_URL=https://applergic-server-react.vercel.app/api/users
